# rusty_discord

./: Cargo.toml  README.md
src/: bot.rs  chatgpt.rs  main.rs
