[package]
name = "rusty_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
dotenvy = "0.15.6"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
songbird = "0.3.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "cache",
]
version ="0.11"
